<resources>
    <string name="app_name">Math Bubbles</string>
    <string name="play_button">Select Game</string>
    <string name="high_score_button">Leader Board</string>
    <string name="settings_button">Settings</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="bubble_leaderboard">Bubble Leaderboard</string>



    <string name="bubble_scores">Bubble</string>

    <string name="bubble_value_1">1</string>
    <string name="bubble_value_2">2</string>
    <string name="bubble_value_3">3</string>
    <string name="bubble_value_4">4</string>
    <string name="bubble_value_5">5</string>
    <string name="bubble_value_6">6</string>
    <string name="bubble_value_7">7</string>
    <string name="bubble_value_8">8</string>
    <string name="bubble_value_9">9</string>


    <string name="user_label">Username</string>
    <string name="score_label">Score</string>
    <string name="how_to_play">How to Play</string>
    <string name="game1">Bubbles</string>


    <string name="pop_up_next">Next</string>
    <string name="pop_up_prev">Previous</string>

    <string name="high_score">High Score: </string>
    <string name="changeLang">Change Language </string>
    <string name="play_game">Play Game</string>
    <string name="game_finish_msg">Great Job! Your Score is</string>

</resources>
