<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/menu_no_bg"
    >


    <ImageButton
        android:id="@+id/imageButton"
        android:contentDescription="A bubble game"
        android:onClick="onPressedBubbles"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bubble_game_icon"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/game1"

        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBubbleScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/high_score"
        android:textSize="13sp"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_how_to_bubbles"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/how_to_play"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewBubbleScore"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="80dp"
        android:onClick="onPressedHowToBubbles"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/button_rounded_corner"
        app:layout_constraintHorizontal_bias="0.287" />



</android.support.constraint.ConstraintLayout>
